# AVScreenCapture

./: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  screen_manager.cpp  screen_manager.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/entryability2/: EntryAbility2.ets
entry/src/main/ets/entrybackupability/: EntryBackupAbility.ets
entry/src/main/ets/pages/: Index.ets  Index2.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
